err/device-cloud.err
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PySocks-1.6.8.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/device_cloud'...
Listing './lib/python3.5/site-packages/device_cloud/_core'...
Listing './lib/python3.5/site-packages/device_cloud/test'...
Listing './lib/python3.5/site-packages/device_cloud-17.12.6.dist-info'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/paho'...
Listing './lib/python3.5/site-packages/paho/mqtt'...
Listing './lib/python3.5/site-packages/paho_mqtt-1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/queues'...
Compiling './lib/python3.5/site-packages/queues/__init__.py'...
***   File "./lib/python3.5/site-packages/queues/__init__.py", line 53
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/queues/backends'...
Compiling './lib/python3.5/site-packages/queues/backends/__init__.py'...
***   File "./lib/python3.5/site-packages/queues/backends/__init__.py", line 22
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/queues/backends/beanstalkd.py'...
***   File "./lib/python3.5/site-packages/queues/backends/beanstalkd.py", line 41
    except (beanstalkc.DeadlineSoon, beanstalkc.CommandFailed, beanstalkc.UnexpectedResponse), e:
                                                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/queues/backends/dummy.py'...
***   File "./lib/python3.5/site-packages/queues/backends/dummy.py", line 28
    except queue.Empty, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/queues/backends/memcached.py'...
***   File "./lib/python3.5/site-packages/queues/backends/memcached.py", line 36
    except (memcache.MemcachedKeyError, MemcachedStringEncodingError), e:
                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/queues/backends/redisd.py'...
***   File "./lib/python3.5/site-packages/queues/backends/redisd.py", line 52
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/queues/backends/sqs.py'...
***   File "./lib/python3.5/site-packages/queues/backends/sqs.py", line 53
    except SQSError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/queues/backends/zenqueued.py'...
***   File "./lib/python3.5/site-packages/queues/backends/zenqueued.py", line 45
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/queues-0.6.3.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/data'...
Compiling './lib/python3.5/site-packages/websocket/policyserver.py'...
***   File "./lib/python3.5/site-packages/websocket/policyserver.py", line 21
    print 'Accepted connection from %s:%s' % address
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/websocket/server.py'...
***   File "./lib/python3.5/site-packages/websocket/server.py", line 57
    except IOError, ex:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './share'...
Listing './share/device_cloud'...
Listing './share/device_cloud/demo'...
Listing './share/device_cloud/docs'...
Listing './share/device_cloud/share'...
Listing './share/device_cloud/share/admin-tools'...
Listing './share/device_cloud/share/admin-tools/app_defs'...
Listing './share/device_cloud/share/admin-tools/role_defs'...
Listing './share/device_cloud/share/admin-tools/thing_defs'...
Listing './share/device_cloud/share/example-ota-packages'...
Listing './share/device_cloud/share/example-ota-packages/idp-rollback-package'...
Listing './share/device_cloud/share/example-ota-packages/simple-ota-package'...
Listing './share/device_cloud/share/sudoers.d'...
Listing './share/device_cloud/share/tests'...
Listing './share/python-wheels'...
